[package]
name = "SwapAnniversary"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"]}
dotenvy = "0.15.7"
poise = "0.6.1"
rusqlite = "0.34.0"
serenity = "0.12.4"
rand = "0.9.0"
rust-fuzzy-search = "0.1.1"
warp = "0.3.7"
serde_json = "1.0.140"
serde = "1.0.219"
